add cls method & player'score features